Generics_Extend_WildCard/Code11_error_report.txt
javac errors for Code11.java 
Code11.java:10: error: incompatible types: Number cannot be converted to T
            list.set(i, tmp.get(list.size() - i - 1));
                               ^
  where T is a type-variable:
    T extends Number declared in method <T>reverse(List<T>)
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error
 
============================================================================= 
ExtendJ errors for Code11.java 
C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics_Extend_WildCard\Code11.java:10: error: no method named set(int, ? extends Number) in java.util.List<T> matches. However, there is a method set(int, Code11.reverse(java.util.List)@T)
 
============================================================================= 
Eclipse ECJ errors for Code11.java 
----------
1. ERROR in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics_Extend_WildCard\Code11.java (at line 10)
	list.set(i, tmp.get(list.size() - i - 1));
	     ^^^
The method set(int, T) in the type List<T> is not applicable for the arguments (int, capture#1-of ? extends Number)
----------
1 problem (1 error)
